--- a/about.html
+++ b/about.html
@@ -14,13 +14,15 @@
   <nav>
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="images/mainlogo.png" class="logo" alt="Room & Flat Finder Logo"></a>
-      <button class="navbar-toggler" type="button" id="navbarToggle" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" id="navbarToggle" aria-label="Toggle navigation" onclick="toggle()" >
+        
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="navbar-vertical">
+      
+      <div class="navbar-vertical" id="navbar_vertical">
         <a class="nav-linkv" href="index.html">Home</a>
         <a class="nav-linkv" href="rooms.html">Rooms</a>
-        <a class="nav-linkv" id="active" href="about.html">About</a>
+        <a class="nav-linkv"  id="active" href="about.html">About</a>
         <a class="nav-linkv"  href="contact.html">Contact</a>
         <a class="nav-linkv" href="login.html">Login</a>
       </div>
@@ -32,10 +34,10 @@
           <a class="nav-link" href="rooms.html">Rooms</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active"  href="about.html">About</a>
+          <a class="nav-link active" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link"  href="contact.html">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="login.html">Login</a>
@@ -43,7 +45,7 @@
       </ul>
     </div>
   </nav>
-  <!-- About us section -->
+ <!-- About us section -->
   <main>
     <h1>Web Alchemists Team</h1>
     <section class="team">
@@ -76,7 +78,7 @@
       </div>
     </div>
   </footer>
-
+  <script src="script/togglenav.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
