--- a/rooms.html
+++ b/rooms.html
@@ -14,11 +14,11 @@
   <nav>
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="images/mainlogo.png" class="logo" alt="Room & Flat Finder Logo"></a>
-      <button class="navbar-toggler" type="button" id="navbarToggle" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" id="navbarToggle" aria-label="Toggle navigation" onclick="toggle()" >
         
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="navbar-vertical">
+      <div class="navbar-vertical" id="navbar_vertical">
         <a class="nav-linkv" href="index.html">Home</a>
         <a class="nav-linkv" id="active" href="rooms.html">Rooms</a>
         <a class="nav-linkv" href="about.html">About</a>
@@ -183,7 +183,7 @@
       </div>
     </div>
   </footer>
-
+  <script src="script/togglenav.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
